# terons_crusade_rs

./: .gitignore  CREDITS  CREDITS.md  Cargo.toml  README.md
assets/items/pickaxe/: pickaxe.json  pickaxe.xcf
assets/ui/inventory/: inventory_bg.xcf  inventory_slot.xcf  inventory_slot_selected.xcf
src/: components.rs  inventory.rs  inventory_menu.rs  item.rs  main.rs  main_menu.rs  player.rs  save_data.rs  tile_map.rs
