[package]
name = "terons_crusade"
authors = ["Rehatbir Singh <rehatbir.singh@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "^0.7"
bevy_rapier2d = "^0.14"

[workspace]
resolver = "2"

[profile.dev.package.rapier3d]
opt-level = 3
