[package]
name = "terons_crusade"
authors = ["Rehatbir Singh <rehatbir.singh@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "^0.7"
bevy_rapier2d = "^0.14"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

[workspace]
resolver = "2"

[profile.dev.package.rapier2d]
opt-level = 3
